footer aggiunto a index.html
inserito tag footer con lorem

--- a/index.html
+++ b/index.html
@@ -12,5 +12,14 @@
   <h1>Ciao Mondo</h1>
  </header>
 
+ <footer>
+  <div>
+    questo è il footer
+  </div>
+  <div>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi, soluta excepturi? Architecto eum voluptas aperiam nulla rerum provident nesciunt quod temporibus dolor error? Nobis et molestias, optio dolores facilis modi.
+  </div>
+ </footer>
+
 </body>
 </html>
